:bug: fix some comments
